--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </ul>
         </nav>
     </header>
+    <br>
     <section id="gallery" class="gallery">
         <img src="Images/pexels-photo-571169.jpeg" alt="Image1">
         <img src="Images/pexels-photo-671557.jpeg" alt="Image2">
@@ -23,5 +24,7 @@
         <img src="Images/pexels-photo-915972.jpeg" alt="Image5">
     </section>
     <footer></footer>
+    <script src="js/main.js">
+    </script>
 </body>
 </html>
