--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </nav>
     </header>
     <br>
+    <h1>Images</h1>
     <section id="gallery" class="gallery">
         <img src="Images/pexels-photo-571169.jpeg" alt="Image1">
         <img src="Images/pexels-photo-671557.jpeg" alt="Image2">
