--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 <body>
   <!-- Images used to open the lightbox -->
   <section id="gallery" class="row">
+    <div>
+      <a href="Images/lightbox/photo-248797-md.jpeg" data-fancybox="gallery" data-caption="Caption #1">
+        <img src="Images/photo-248797-sm.jpeg" class="imgg" alt="Image1">
+        <!--<a href="Images/full/photo-248797-full.jpg">Full Size</a>-->
+      </a>
+      <a href="Images/lightbox/photo-371633-md.jpeg" data-fancybox="gallery" data-caption="Caption #2">
+        <img src="Images/photo-371633-sm.jpeg" class="imgg" alt="Image2">
+      </a>
+      <a href="Images/lightbox/photo-414171-md.jpeg" data-fancybox="gallery" data-caption="Caption #3">
+        <img src="Images/photo-414171-sm.jpeg" class="imgg" alt="Image3">
+      </a>
+      <a href="Images/lightbox/photo-1002812-md.jpeg" data-fancybox="gallery" data-caption="Caption #4">
+        <img src="Images/photo-1002812-sm.jpeg" class="imgg" alt="Image4">
+      </a>
+      <a href="Images/lightbox/photo-87739-md.jpeg" data-fancybox="gallery" data-caption="Caption #5">
+        <img src="Images/photo-87739-sm.jpeg" class="imgg" alt="Image5">
+      </a>
+      <a href="Images/lightbox/photo-545968-md.jpeg" data-fancybox="gallery" data-caption="Caption #6">
+        <img src="Images/photo-545968-sm.jpeg" class="imgg" alt="Image6">
+      </a>
+
+
+
+
+
+
+    </div>
+
+
+    <!--
     <div class="column">
       <img src="Images/photo-248797-sm.jpeg" class="hover-shadow" alt="Image1">
     </div>
@@ -28,7 +58,7 @@
     </div>
     <div class="column">
       <img src="Images/photo-545968-sm.jpeg" class="hover-shadow" alt="Image6">
-    </div>
+    </div>-->
   </section>
 
 
@@ -67,16 +97,16 @@
         <img src="Images/lightbox/pexels-photo-545968.jpeg" style="width:100%">
       </div>-->
 
-      <!-- Next/previous controls 
+  <!-- Next/previous controls 
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
 -->
-      <!-- Caption text 
+  <!-- Caption text 
       <div class="caption-container">
         <p id="caption"></p>
       </div>
 -->
-      <!-- Thumbnail image controls 
+  <!-- Thumbnail image controls 
       <div class="column">
         <img class="demo" src="Images/pexels-photo-248797.jpeg" onclick="currentSlide(1)" alt="Image1">
       </div>
@@ -102,7 +132,11 @@
       </div>
     </div>
   </div>-->
-  <footer></footer>
+
+  <footer>
+    <span class="">Copyrights &copy; 2019 Amine Ouldaouali</span>
+  </footer>
+
   <script src="dist/jQuery v3.4.1.min.js"></script>
   <script src="dist/jquery.fancybox.min.js"></script>
   <script src="js/main.js"></script>
