--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
   <!-- Images used to open the lightbox -->
   <section id="gallery" class="row">
     <div>
-      <a href="Images/lightbox/photo-248797-md.jpeg" data-fancybox="gallery" data-caption="Caption #1">
-        <img src="Images/photo-248797-sm.jpeg" class="imgg" alt="Image1">
+      <a href="https://source.unsplash.com/collection/3802332/1200x*" data-fancybox="gallery" data-caption="Caption #1">
+        <img src="https://source.unsplash.com/collection/3802332/300x200" class="imgg" alt="Image1">
         <!--<a href="Images/full/photo-248797-full.jpg">Full Size</a>-->
       </a>
       <a href="Images/lightbox/photo-371633-md.jpeg" data-fancybox="gallery" data-caption="Caption #2">
         <img src="Images/photo-371633-sm.jpeg" class="imgg" alt="Image2">
       </a>
-      <a href="Images/lightbox/photo-414171-md.jpeg" data-fancybox="gallery" data-caption="Caption #3">
+      <a href="Images/lightbox/photo-414171-md.jpeg" data-fancybox="gallery gallery1" data-caption="Caption #3">
         <img src="Images/photo-414171-sm.jpeg" class="imgg" alt="Image3">
       </a>
-      <a href="Images/lightbox/photo-1002812-md.jpeg" data-fancybox="gallery" data-caption="Caption #4">
+      <a href="Images/lightbox/photo-1002812-md.jpeg" data-fancybox="gallery1" data-caption="Caption #4">
         <img src="Images/photo-1002812-sm.jpeg" class="imgg" alt="Image4">
       </a>
-      <a href="Images/lightbox/photo-87739-md.jpeg" data-fancybox="gallery" data-caption="Caption #5">
+      <a href="Images/lightbox/photo-87739-md.jpeg" data-fancybox="gallery1" data-caption="Caption #5">
         <img src="Images/photo-87739-sm.jpeg" class="imgg" alt="Image5">
       </a>
-      <a href="Images/lightbox/photo-545968-md.jpeg" data-fancybox="gallery" data-caption="Caption #6">
+      <a href="Images/lightbox/photo-545968-md.jpeg" data-fancybox="gallery1" data-caption="Caption #6">
         <img src="Images/photo-545968-sm.jpeg" class="imgg" alt="Image6">
       </a>
 
