--- a/index.html
+++ b/index.html
@@ -9,130 +9,14 @@
 </head>
 
 <body>
-  <!-- Images used to open the lightbox -->
-  <section id="gallery" class="row">
-    <div>
-      <a href="https://source.unsplash.com/collection/3802332/1200x*" data-fancybox="gallery" data-caption="Caption #1">
-        <img src="https://source.unsplash.com/collection/3802332/300x200" class="imgg" alt="Image1">
-        <!--<a href="Images/full/photo-248797-full.jpg">Full Size</a>-->
-      </a>
-      <a href="Images/lightbox/photo-371633-md.jpeg" data-fancybox="gallery" data-caption="Caption #2">
-        <img src="Images/photo-371633-sm.jpeg" class="imgg" alt="Image2">
-      </a>
-      <a href="Images/lightbox/photo-414171-md.jpeg" data-fancybox="gallery gallery1" data-caption="Caption #3">
-        <img src="Images/photo-414171-sm.jpeg" class="imgg" alt="Image3">
-      </a>
-      <a href="Images/lightbox/photo-1002812-md.jpeg" data-fancybox="gallery1" data-caption="Caption #4">
-        <img src="Images/photo-1002812-sm.jpeg" class="imgg" alt="Image4">
-      </a>
-      <a href="Images/lightbox/photo-87739-md.jpeg" data-fancybox="gallery1" data-caption="Caption #5">
-        <img src="Images/photo-87739-sm.jpeg" class="imgg" alt="Image5">
-      </a>
-      <a href="Images/lightbox/photo-545968-md.jpeg" data-fancybox="gallery1" data-caption="Caption #6">
-        <img src="Images/photo-545968-sm.jpeg" class="imgg" alt="Image6">
-      </a>
-
-
-
-
-
-
+  <!-- -->
+  <section class="center">
+    <div id="gallery">
+      <button>
+        <a href="https://source.unsplash.com/collection/2351409" data-fancybox="gallery" data-caption="Caption #1">START Gallery</a>
+      </button>
     </div>
-
-
-    <!--
-    <div class="column">
-      <img src="Images/photo-248797-sm.jpeg" class="hover-shadow" alt="Image1">
-    </div>
-    <div class="column">
-      <img src="Images/photo-371633-sm.jpeg" class="hover-shadow" alt="Image2">
-    </div>
-    <div class="column">
-      <img src="Images/photo-414171-sm.jpeg" class="hover-shadow" alt="Image3">
-    </div>
-    <div class="column">
-      <img src="Images/photo-1002812-sm.jpeg" class="hover-shadow" alt="Image4">
-    </div>
-    <div class="column">
-      <img src="Images/photo-87739-sm.jpeg" class="hover-shadow" alt="Image5">
-    </div>
-    <div class="column">
-      <img src="Images/photo-545968-sm.jpeg" class="hover-shadow" alt="Image6">
-    </div>-->
   </section>
-
-
-  <!-- The Modal/Lightbox 
-  <div id="myModal" class="modal">
-    <span class="close cursor" onclick="closeModal()">&times;</span>
-    <div class="modal-content">
-
-      <div class="mySlides">
-        <div class="numbertext">1 / 6</div>
-        <img src="Images/lightbox/pexels-photo-248797.jpeg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">2 / 6</div>
-        <img src="Images/lightbox/pexels-photo-371633.jpeg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">3 / 6</div>
-        <img src="Images/lightbox/pexels-photo-414171.jpeg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">4 / 6</div>
-        <img src="Images/lightbox/pexels-photo-1002812.jpeg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">5 / 6</div>
-        <img src="Images/lightbox/pexels-photo-87739.jpeg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">6 / 6</div>
-        <img src="Images/lightbox/pexels-photo-545968.jpeg" style="width:100%">
-      </div>-->
-
-  <!-- Next/previous controls 
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
--->
-  <!-- Caption text 
-      <div class="caption-container">
-        <p id="caption"></p>
-      </div>
--->
-  <!-- Thumbnail image controls 
-      <div class="column">
-        <img class="demo" src="Images/pexels-photo-248797.jpeg" onclick="currentSlide(1)" alt="Image1">
-      </div>
-
-      <div class="column">
-        <img class="demo" src="Images/pexels-photo-371633.jpeg" onclick="currentSlide(2)" alt="Image2">
-      </div>
-
-      <div class="column">
-        <img class="demo" src="Images/pexels-photo-414171.jpeg" onclick="currentSlide(3)" alt="Image3">
-      </div>
-
-      <div class="column">
-        <img class="demo" src="Images/pexels-photo-1002812.jpeg" onclick="currentSlide(4)" alt="Image4">
-      </div>
-
-      <div class="column">
-        <img class="demo" src="Images/pexels-photo-87739.jpeg" onclick="currentSlide(4)" alt="Image5">
-      </div>
-
-      <div class="column">
-        <img class="demo" src="Images/pexels-photo-545968.jpeg" onclick="currentSlide(4)" alt="Image6">
-      </div>
-    </div>
-  </div>-->
-
   <footer>
     <span class="">Copyrights &copy; 2019 Amine Ouldaouali</span>
   </footer>
