add carousel and fatch from Unsplash API

--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <title>Image Gallery</title>
+
+
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css" rel="stylesheet" />
+
+
   <link rel="stylesheet" href="dist/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <!-- -->
-  <section class="center">
-    <div id="gallery">
-      <button>
-        <a href="https://source.unsplash.com/collection/2351409" data-fancybox="gallery" data-caption="Caption #1">START Gallery</a>
-      </button>
-    </div>
-  </section>
+
+
+
+
+
+
+  <div id="carousel1">
+   
+  </div>
+
+
   <footer>
     <span class="">Copyrights &copy; 2019 Amine Ouldaouali</span>
   </footer>
 
   <script src="dist/jQuery v3.4.1.min.js"></script>
   <script src="dist/jquery.fancybox.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
